Исправила тесты + добавила негативные тесты для контроллера