@@ -6,6 +6,8 @@ import faang.school.projectservice.dto.moment.MomentFilterDto;
 import faang.school.projectservice.service.moment.MomentService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -15,9 +17,10 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
-import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -26,6 +29,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -39,7 +43,6 @@ public class MomentControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
     private MomentDto momentDto;
-    private MomentFilterDto momentFilterDto;
 
     @BeforeEach
     void setUp() {
@@ -60,13 +63,7 @@ public class MomentControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(momentDto)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.name").value("Test Moment"))
-                .andExpect(jsonPath("$.description").value("Test Description"))
-                .andExpect(jsonPath("$.imageId").value("imageId"))
-                .andExpect(jsonPath("$.projectIds", hasSize(2)))
-                .andExpect(jsonPath("$.projectIds", contains(1, 2)))
-                .andExpect(jsonPath("$.teamMemberIds", hasSize(2)))
-                .andExpect(jsonPath("$.teamMemberIds", contains(1, 2)));
+                .andExpect(content().json(objectMapper.writeValueAsString(momentDto)));
     }
 
     @Test
@@ -78,13 +75,7 @@ public class MomentControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(momentDto)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Test Moment"))
-                .andExpect(jsonPath("$.description").value("Test Description"))
-                .andExpect(jsonPath("$.imageId").value("imageId"))
-                .andExpect(jsonPath("$.projectIds", hasSize(2)))
-                .andExpect(jsonPath("$.projectIds", contains(1, 2)))
-                .andExpect(jsonPath("$.teamMemberIds", hasSize(2)))
-                .andExpect(jsonPath("$.teamMemberIds", contains(1, 2)));
+                .andExpect(content().json(objectMapper.writeValueAsString(momentDto)));
     }
 
     @Test
@@ -96,19 +87,12 @@ public class MomentControllerTest {
 
     @Test
     void testGetAllMoments() throws Exception {
-        List<MomentDto> momentDtos = Arrays.asList(momentDto);
+        List<MomentDto> momentDtos = List.of(momentDto);
         when(momentService.getAllMoments()).thenReturn(momentDtos);
 
         mockMvc.perform(get("/moment"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].name").value("Test Moment"))
-                .andExpect(jsonPath("$[0].description").value("Test Description"))
-                .andExpect(jsonPath("$[0].imageId").value("imageId"))
-                .andExpect(jsonPath("$[0].projectIds", hasSize(2)))
-                .andExpect(jsonPath("$[0].projectIds", contains(1, 2)))
-                .andExpect(jsonPath("$[0].teamMemberIds", hasSize(2)))
-                .andExpect(jsonPath("$[0].teamMemberIds", contains(1, 2)));
+                .andExpect(content().json("[" + objectMapper.writeValueAsString(momentDto) + "]"));
     }
 
     @Test
@@ -117,13 +101,12 @@ public class MomentControllerTest {
         when(momentService.getMomentById(momentId)).thenReturn(momentDto);
         mockMvc.perform(get("/moment/{id}", momentId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Test Moment"))
-                .andExpect(jsonPath("$.description").value("Test Description"));
+                .andExpect(content().json(objectMapper.writeValueAsString(momentDto)));
     }
 
     @Test
     void testFilterMoments() throws Exception {
-        List<MomentDto> momentDtos = Arrays.asList(momentDto);
+        List<MomentDto> momentDtos = List.of(momentDto);
         LocalDateTime now = LocalDateTime.now();
         MomentFilterDto filterDto = MomentFilterDto.builder()
                 .fromDate(now.minusDays(1))
@@ -136,12 +119,73 @@ public class MomentControllerTest {
                         .content(objectMapper.writeValueAsString(filterDto)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].name").value("Test Moment"))
-                .andExpect(jsonPath("$[0].description").value("Test Description"))
-                .andExpect(jsonPath("$[0].imageId").value("imageId"))
-                .andExpect(jsonPath("$[0].projectIds", hasSize(2)))
-                .andExpect(jsonPath("$[0].projectIds", contains(1, 2)))
-                .andExpect(jsonPath("$[0].teamMemberIds", hasSize(2)))
-                .andExpect(jsonPath("$[0].teamMemberIds", contains(1, 2)));
+                .andExpect(content().json("[" + objectMapper.writeValueAsString(momentDto) + "]"));
+    }
+
+    static Stream<Object[]> invalidMomentDto() {
+        return Stream.of(
+                new Object[]{MomentDto.builder()
+                        .description("Test Description")
+                        .date(LocalDateTime.now())
+                        .imageId("imageId")
+                        .projectIds(Arrays.asList(1L, 2L))
+                        .teamMemberIds(Arrays.asList(1L, 2L)).build()
+                },
+                new Object[]{MomentDto.builder()
+                        .name(" ")
+                        .description("Test Description")
+                        .date(LocalDateTime.now())
+                        .imageId("imageId")
+                        .projectIds(Arrays.asList(1L, 2L))
+                        .teamMemberIds(Arrays.asList(1L, 2L)).build()
+                },
+                new Object[]{MomentDto.builder()
+                        .name("moment")
+                        .date(LocalDateTime.now())
+                        .imageId("imageId")
+                        .projectIds(Arrays.asList(1L, 2L))
+                        .teamMemberIds(Arrays.asList(1L, 2L)).build()
+                },
+                new Object[]{MomentDto.builder()
+                        .name("moment")
+                        .description("")
+                        .date(LocalDateTime.now())
+                        .imageId("imageId")
+                        .projectIds(Arrays.asList(1L, 2L))
+                        .teamMemberIds(Arrays.asList(1L, 2L)).build()
+                },
+                new Object[]{MomentDto.builder()
+                        .name("moment")
+                        .description("description")
+                        .imageId("imageId")
+                        .projectIds(Arrays.asList(1L, 2L))
+                        .teamMemberIds(Arrays.asList(1L, 2L)).build()
+                },
+                new Object[]{MomentDto.builder()
+                        .name("moment")
+                        .description("description")
+                        .imageId("imageId")
+                        .date(LocalDateTime.now())
+                        .projectIds(Collections.emptyList())
+                        .teamMemberIds(Arrays.asList(1L, 2L)).build()
+                }
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("invalidMomentDto")
+    void testCreateMomentInvalid() throws Exception {
+        momentDto = new MomentDto();
+        momentDto.setDescription("Test Description");
+        momentDto.setDate(LocalDateTime.now());
+        momentDto.setImageId("imageId");
+        momentDto.setProjectIds(Arrays.asList(1L, 2L));
+        momentDto.setTeamMemberIds(Arrays.asList(1L, 2L));
+        when(momentService.createMoment(any(MomentDto.class))).thenReturn(momentDto);
+
+        mockMvc.perform(post("/moment")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(momentDto)))
+                .andExpect(status().isBadRequest());
     }
 }
